--- a/note/home/noteDisplay.html
+++ b/note/home/noteDisplay.html
@@ -24,7 +24,7 @@
 
 <script>
     // Simulate fetching data (replace this with actual data retrieval)
-    var data = "????";
+    var data = "投稿内容";
 
     // Get a reference to the element where you want to display the content
     var contentElement = document.getElementById("dynamic-content");
