--- a/note/uploadCompletion/uploadCompletion.html
+++ b/note/uploadCompletion/uploadCompletion.html
@@ -21,7 +21,7 @@
 
 <script>
   // Replace this line with the value you want to insert dynamically
-  var uploadedText = "????";
+  var uploadedText = "投稿内容";
 
   // Get a reference to the h1 element by its id
   var uploadStatusElement = document.getElementById("upload-status");
